feat(Recmo): Ajout d'une cione pour me login

--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -16,7 +16,7 @@
                     <ion-input [(ngModel)]="password"></ion-input>
             </ion-item>
             <ion-button expand="full" (click)="home()">
-              <ion-icon slot="start" name="star"></ion-icon>
+                <ion-icon name="log-in"></ion-icon>
                 Se connecter
             </ion-button>
             <p> <a (click)="register()"><em>Vous n'etes pas encore inscris?</em></a></p>
